--- a/html/admin.html
+++ b/html/admin.html
@@ -349,7 +349,9 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:3000/api';
+        const API_URL = window.location.hostname === 'localhost' 
+            ? 'http://localhost:3000/api' 
+            : '/api';
 
         // Carrega dados ao iniciar
         window.addEventListener('DOMContentLoaded', () => {
