--- a/html/login.html
+++ b/html/login.html
@@ -245,7 +245,9 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:3000/api';
+        const API_URL = window.location.hostname === 'localhost' 
+            ? 'http://localhost:3000/api' 
+            : '/api';
 
         // Verifica se já está logado
         window.addEventListener('DOMContentLoaded', () => {
