--- a/html/admin.html
+++ b/html/admin.html
@@ -351,7 +351,7 @@
     <script>
         const API_URL = window.location.hostname === 'localhost' 
             ? 'http://localhost:3000/api' 
-            : '/api';
+            : `${window.location.origin}/api`;
 
         // Carrega dados ao iniciar
         window.addEventListener('DOMContentLoaded', () => {
